fix: body visibility

--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,5 @@
 body {
     background-color: #f8f9f2;
     font-family: 'Roboto', sans-serif;
+    margin-bottom: 100px;
 }
